Fix array tests