@@ -87,12 +87,12 @@ public class ArrayTest extends TypeCheckingTestCase {
 
   @Test
   public void extendsTest() {
-    resolveNamesModule("\\record R \\extends DArray", 1);
+    typeCheckModule("\\record R \\extends DArray", 1);
   }
 
   @Test
   public void extendsTest2() {
-    resolveNamesModule("\\record R \\extends Array", 1);
+    typeCheckModule("\\record R \\extends Array", 1);
   }
 
   @Test
@@ -680,7 +680,7 @@ public class ArrayTest extends TypeCheckingTestCase {
   @Test
   public void inferTest() {
     FunctionDefinition def = (FunctionDefinition) typeCheckDef("\\func test {A : \\Type} {n : Nat} (l : Array A n) : l = l => idp");
-    assertTrue(((ClassCallExpression) ((FunCallExpression) def.getResultType()).getDefCallArguments().get(0)).isImplemented(Prelude.ARRAY_LENGTH));
+    assertTrue(((ClassCallExpression) ((FunCallExpression) def.getResultType()).getDefCallArguments().getFirst()).isImplemented(Prelude.ARRAY_LENGTH));
   }
 
   @Test
